# galgame_rank

./: README.md  data.txt  data1.txt  data2.txt  games_info.csv  games_info.xlsx  pyproject.toml
galgame_rank_react/: package-lock.json  package.json
galgame_rank_react/backend/: app.py
galgame_rank_react/src/: main.tsx
galgame_rank_react/src/routes/: Home.tsx
src/: app.py  dataobtain.py  main.py
src/galgame_rank/: app.py  dataobtain.py  main.py
src/galgame_rank/data/: games_info.csv  games_info.xlsx
src/galgame_rank/templates/: add.html  index.html  login.html
src/templates/: index.html
